syntax = "proto3";

import "google/protobuf/timestamp.proto";

option csharp_namespace = "GrpcService";

package comment;

service Commenter {
  rpc Create (CreateRequest) returns (CreateResponse);
  rpc GetByPhotoId (GetByPhotoIdRequest) returns (GetByPhotoIdResponse);
}

message CreateRequest {
    int32 photoid = 1;
    string title = 2;
    string content = 3;
}

message CreateResponse {
    int32 id = 1;
    int32 photoid = 2;
    string title = 3;
    string content = 4;
    google.protobuf.Timestamp submittedon = 5;
}

message GetByPhotoIdRequest {
    int32 photoid = 1;
}

message GetByPhotoIdResponse {
    repeated GetByPhotoIdItem comments = 1;
}

message GetByPhotoIdItem {
    int32 id = 1;
    int32 photoid = 2;
    string title = 3;
    string content = 4;
    google.protobuf.Timestamp submittedon = 5;
}